--- a/index.html
+++ b/index.html
@@ -5,6 +5,55 @@
     <link href="./resources/css/index.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-
+    <div class="header" id="home">
+      <h1>Broadway Design</h1>
+      <p></p>
+      <nav>
+        <p><a href="#home">Home</a></p>
+        <p><a href="#process">Process</a></p>
+        <p><a href="index.html">Work</a></p>
+        <p><a href="index.html">Team</a></p>
+        <p><a href="Contact">Contact</a></p>
+      </nav>
+    </div>
+    <div class="middle" id="process">
+      <h2>Our Process</h2>
+      <p>
+        <img src="./resources/images/identify.svg" />
+      </p>
+      <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+      <p>
+        <img src="./resources/images/understand.svg" />
+      </p>
+      <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+      <p>
+        <img src="./resources/images/execute.svg" />
+      </p>
+      <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+    </div>
+    <div class="header">
+      <h2>Designed in New York</h2>
+    </div>
+    <div class="low-menu">
+      <h3 id="work">Portfolio</h3>
+        <p>Coming Soon</p>
+      <h3 id="team">Team</h3>
+        <p>We're hiring!</p>
+      <h3 id="contact">Contact</h3>
+        <p>Phone: (555)-555-5555<br />E-mail: test@example.com<br />Twitter: @test</p>
+    </div>
+    <div class="footer">
+      <nav>
+        <p>© Broadway 2017
+        <a href="#home">Home</a>
+        <a href="#process">Process</a>
+        <a href="index.html">Work</a>
+        <a href="index.html">Team</a>
+        <a href="Contact">Contact</a></p>
+      </nav>
+    </div>
   </body>
 </html>
