--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
       <h1>Broadway Design</h1>
       <p></p>
       <nav>
-        <p><a href="#home">Home</a></p>
-        <p><a href="#process">Process</a></p>
-        <p><a href="index.html">Work</a></p>
-        <p><a href="index.html">Team</a></p>
-        <p><a href="Contact">Contact</a></p>
+        <p><a class="butnav" href="#home">Home</a></p>
+        <p><a class="butnav" href="#process">Process</a></p>
+        <p><a class="butnav" href="#work">Work</a></p>
+        <p><a class="butnav" href="#team">Team</a></p>
+        <p><a class="butnav" href="#contact">Contact</a></p>
       </nav>
     </div>
     <div class="middle" id="process">
@@ -48,11 +48,11 @@
     <div class="footer">
       <nav>
         <p>© Broadway 2017
-        <a href="#home">Home</a>
-        <a href="#process">Process</a>
-        <a href="index.html">Work</a>
-        <a href="index.html">Team</a>
-        <a href="Contact">Contact</a></p>
+        <a class="butnav" href="#home">Home</a>
+        <a class="butnav" href="#process">Process</a>
+        <a class="butnav" href="#work">Work</a>
+        <a class="butnav" href="#team">Team</a>
+        <a class="butnav" href="#contact">Contact</a></p>
       </nav>
     </div>
   </body>
