--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
       <h3 id="team">Team</h3>
         <p>We're hiring!</p>
       <h3 id="contact">Contact</h3>
-        <p>Phone: (555)-555-5555<br />E-mail: test@example.com<br />Twitter: @test</p>
+        <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
     </div>
     <div class="footer">
       <nav>
